Enrich all Java and Spring pages with Q&A, code examples, and French translations